# vibe-trading

./: .env.example  .gitignore  AGENTS.md  BACKTEST_GUIDE.md  BACKTEST_README.md  CLAUDE.md  Makefile  README.md  TODO.md  backtest_config.example.yaml  demo_backtest.py  demo_improvements_simple.py  package-lock.json  package.json  pyproject.toml  pytest.ini  run_backtest_actual.py  test_all.py  test_historical.py  test_historical_backtest.py  test_historical_backtest_quick.py  test_historical_improvements.py  test_improvements_visible.py  test_indicators_complete.py  test_researchers.py  test_sentiment_tools.py  test_technical_analysis.py  test_tools_usage.py
.github/workflows/: deploy.yml
backend/: test_agent_tools_integration.py  test_decision_layer.py  test_improvements.py  test_researcher_debate.py  test_risk_tools.py
backend/examples/: provider_usage_example.py
backend/tests/: conftest.py
backend/web_backtest/: app.py
docs/: AGENTS.md  ARCHITECTURE.md  IMPROVEMENTS.md  MULTI_THREAD.md  PERFORMANCE.md  RISK_MANAGEMENT.md  TOOLS.md  WEB_SYSTEM_STATUS.md  WORKFLOW.md  index.md  package-lock.json  package.json  pi_agent_core.md
docs/.vitepress/: config.mjs  config.mts
docs/develop/: changelog.md  contributing.md  roadmap.md
docs/guide/: agents.md  api.md  architecture.md  backtest.md  configuration.md  context-management.md  custom-agent.md  data-provider.md  intro.md  memory.md  monitoring.md  quick-start.md  workflow.md
frontend/: index.html
frontend/react-app/: index.html  (+5 more)
scripts/: restart_system.sh
tests/: conftest.py  test_binance_trading.py
(+142 files in other folders)
